[gd_scene load_steps=8 format=4 uid="uid://bbtbskpga32lp"]

[ext_resource type="TileSet" uid="uid://es13b5gdcu4s" path="res://Assets/background.tres" id="1_w8io1"]
[ext_resource type="Script" uid="uid://bo6i12etclkes" path="res://Scripts/Main.gd" id="1_y3w6w"]
[ext_resource type="PackedScene" uid="uid://bi6nq44dsggfq" path="res://Scenes/Fish.tscn" id="2_cuchx"]
[ext_resource type="PackedScene" uid="uid://3syvkpegmo4m" path="res://Scenes/Coin.tscn" id="3_4o0x2"]
[ext_resource type="PackedScene" uid="uid://c60y1jwkg6fqi" path="res://Scenes/Crab.tscn" id="3_jw32o"]
[ext_resource type="Script" uid="uid://dul4eb4x4pr2v" path="res://Scripts/GameDropArea.gd" id="5_nn2bc"]
[ext_resource type="AudioStream" uid="uid://dyb64u5ur5da7" path="res://Assets/saba_saba.ogg" id="6_kvbsp"]

[node name="Main" type="Node2D"]
script = ExtResource("1_y3w6w")
menu_scene_path = "res://Scenes/MainMenu.tscn"
fish_scene = ExtResource("2_cuchx")
crab_scene = ExtResource("3_jw32o")
coin_scene = ExtResource("3_4o0x2")
coins = 200

[node name="UI" type="CanvasLayer" parent="."]
offset = Vector2(0, 10)
transform = Transform2D(1, 0, 0, 1, 0, 10)

[node name="FishCount" type="Label" parent="UI"]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.0
offset_right = -115.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Fishes: 0"

[node name="CoinCount" type="Label" parent="UI"]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Coins: 0"

[node name="GameDropArea" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_nn2bc")

[node name="FishBarBox" type="PanelContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="FishBar" type="HBoxContainer" parent="UI/FishBarBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="UI"]
offset_left = 10.0
offset_right = 124.0
offset_bottom = 31.0
text = "Back to Menu"

[node name="FishContainer" type="Node2D" parent="."]
z_index = 1

[node name="Background" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(-6, -15)
tile_map_data = PackedByteArray("AAAAAAAAAAAJAAYAAAABAAAAAAAJAAYAAAACAAAAAAAJAAYAAAADAAAAAAAJAAYAAAAEAAAAAAAJAAYAAAAFAAAAAAAJAAYAAAAGAAAAAAAJAAYAAAAHAAAAAAAJAAYAAAAIAAAAAAAJAAYAAAAJAAAAAAAJAAYAAAAKAAAAAAAJAAYAAAALAAAAAAAJAAYAAAAMAAAAAAAJAAYAAAANAAAAAAAJAAYAAAAOAAAAAAAJAAYAAAAPAAAAAAAJAAYAAAAQAAAAAAAJAAYAAAARAAAAAAAJAAYAAAASAAAAAAAJAAYAAAATAAAAAAAJAAYAAAAAAAEAAAAJAAcAAAAAAAIAAAAJAAcAAAAAAAMAAAAJAAcAAAABAAMAAAAJAAcAAAABAAQAAAAJAAcAAAABAAUAAAAJAAcAAAABAAIAAAAJAAcAAAABAAEAAAAJAAcAAAABAAYAAAAJAAcAAAAAAAYAAAAJAAcAAAAAAAcAAAAJAAcAAAAAAAUAAAAJAAcAAAAAAAQAAAAJAAcAAAAAAAgAAAAJAAcAAAABAAgAAAAJAAcAAAABAAcAAAAJAAcAAAABAAkAAAAJAAcAAAAAAAkAAAAJAAcAAAACAAkAAAAJAAcAAAACAAgAAAAJAAcAAAACAAcAAAAJAAcAAAACAAYAAAAJAAcAAAACAAUAAAAJAAcAAAACAAQAAAAJAAcAAAACAAMAAAAJAAcAAAADAAIAAAAJAAcAAAADAAEAAAAJAAcAAAACAAEAAAAJAAcAAAAEAAEAAAAJAAcAAAAFAAEAAAAJAAcAAAAGAAEAAAAJAAcAAAAHAAEAAAAJAAcAAAAIAAEAAAAJAAcAAAASAAEAAAAJAAcAAAATAAEAAAAJAAcAAAARAAEAAAAJAAcAAAAQAAEAAAAJAAcAAAAPAAEAAAAJAAcAAAAOAAEAAAAJAAcAAAANAAEAAAAJAAcAAAAMAAEAAAAJAAcAAAALAAEAAAAJAAcAAAAJAAEAAAAJAAcAAAAKAAEAAAAJAAcAAAACAAIAAAAJAAcAAAAEAAIAAAAJAAcAAAAFAAIAAAAJAAcAAAAGAAIAAAAJAAcAAAAHAAIAAAAJAAcAAAAIAAIAAAAJAAcAAAAJAAIAAAAJAAcAAAAKAAIAAAAJAAcAAAALAAIAAAAJAAcAAAAMAAIAAAAJAAcAAAAOAAIAAAAJAAcAAAAPAAIAAAAJAAcAAAAQAAIAAAAJAAcAAAARAAIAAAAJAAcAAAASAAIAAAAJAAcAAAATAAIAAAAJAAcAAAATAAMAAAAJAAcAAAASAAMAAAAJAAcAAAARAAMAAAAJAAcAAAAQAAMAAAAJAAcAAAAPAAMAAAAJAAcAAAAOAAMAAAAJAAcAAAANAAMAAAAJAAcAAAAMAAMAAAAJAAcAAAALAAMAAAAJAAcAAAAKAAMAAAAJAAcAAAAJAAMAAAAJAAcAAAAIAAMAAAAJAAcAAAAHAAMAAAAJAAcAAAAGAAMAAAAJAAcAAAAFAAMAAAAJAAcAAAAFAAQAAAAJAAcAAAAEAAQAAAAJAAcAAAADAAQAAAAJAAcAAAADAAMAAAAJAAcAAAAEAAMAAAAJAAcAAAADAAUAAAAJAAcAAAAEAAUAAAAJAAcAAAAFAAUAAAAJAAcAAAAGAAUAAAAJAAcAAAAHAAUAAAAJAAcAAAAIAAUAAAAJAAcAAAAJAAUAAAAJAAcAAAAKAAUAAAAJAAcAAAAKAAQAAAAJAAcAAAAJAAQAAAAJAAcAAAAIAAQAAAAJAAcAAAAHAAQAAAAJAAcAAAAGAAQAAAAJAAcAAAALAAQAAAAJAAcAAAAMAAQAAAAJAAcAAAANAAQAAAAJAAcAAAAOAAQAAAAJAAcAAAAPAAQAAAAJAAcAAAAQAAQAAAAJAAcAAAARAAQAAAAJAAcAAAASAAQAAAAJAAcAAAATAAQAAAAJAAcAAAATAAUAAAAJAAcAAAASAAUAAAAJAAcAAAARAAUAAAAJAAcAAAARAAYAAAAJAAcAAAAQAAYAAAAJAAcAAAAPAAYAAAAJAAcAAAAOAAYAAAAJAAcAAAANAAYAAAAJAAcAAAAMAAYAAAAJAAcAAAALAAYAAAAJAAcAAAALAAUAAAAJAAcAAAAMAAUAAAAJAAcAAAANAAUAAAAJAAcAAAAOAAUAAAAJAAcAAAAPAAUAAAAJAAcAAAAQAAUAAAAJAAcAAAASAAYAAAAJAAcAAAATAAYAAAAJAAcAAAATAAcAAAAJAAcAAAATAAgAAAAJAAcAAAASAAgAAAAJAAcAAAASAAkAAAAJAAcAAAATAAkAAAAJAAcAAAASAAcAAAAJAAcAAAARAAgAAAAJAAcAAAARAAkAAAAJAAcAAAARAAcAAAAJAAcAAAAQAAgAAAAJAAcAAAAQAAkAAAAJAAcAAAAPAAgAAAAJAAcAAAAPAAcAAAAJAAcAAAAQAAcAAAAJAAcAAAAOAAgAAAAJAAcAAAAOAAkAAAAJAAcAAAAPAAkAAAAJAAcAAAAOAAcAAAAJAAcAAAANAAcAAAAJAAcAAAANAAgAAAAJAAcAAAANAAkAAAAJAAcAAAAMAAcAAAAJAAcAAAAMAAgAAAAJAAcAAAALAAgAAAAJAAcAAAALAAkAAAAJAAcAAAALAAcAAAAJAAcAAAAMAAkAAAAJAAcAAAAKAAcAAAAJAAcAAAAKAAYAAAAJAAcAAAAKAAgAAAAJAAcAAAAKAAkAAAAJAAcAAAAJAAgAAAAJAAcAAAAJAAcAAAAJAAcAAAAJAAYAAAAJAAcAAAAIAAYAAAAJAAcAAAAIAAcAAAAJAAcAAAAIAAgAAAAJAAcAAAAIAAkAAAAJAAcAAAAHAAkAAAAJAAcAAAAJAAkAAAAJAAcAAAAHAAgAAAAJAAcAAAAHAAcAAAAJAAcAAAAHAAYAAAAJAAcAAAAGAAgAAAAJAAcAAAAGAAkAAAAJAAcAAAAFAAgAAAAJAAcAAAAFAAcAAAAJAAcAAAAGAAcAAAAJAAcAAAAGAAYAAAAJAAcAAAAFAAkAAAAJAAcAAAAFAAYAAAAJAAcAAAAEAAcAAAAJAAcAAAAEAAgAAAAJAAcAAAAEAAkAAAAJAAcAAAADAAkAAAAJAAcAAAADAAgAAAAJAAcAAAADAAcAAAAJAAcAAAADAAYAAAAJAAcAAAAEAAYAAAAJAAcAAAANAAIAAAAJAAcAAAAAAAoAAAAJAAcAAAABAAoAAAAJAAcAAAACAAoAAAAJAAcAAAADAAoAAAAJAAcAAAAEAAoAAAAJAAcAAAAFAAoAAAAJAAcAAAAGAAoAAAAJAAcAAAAHAAoAAAAJAAcAAAAIAAoAAAAJAAcAAAAJAAoAAAAJAAcAAAAKAAoAAAAJAAcAAAALAAoAAAAJAAcAAAAMAAoAAAAJAAcAAAANAAoAAAAJAAcAAAAOAAoAAAAJAAcAAAAPAAoAAAAJAAcAAAAQAAoAAAAJAAcAAAARAAoAAAAJAAcAAAASAAoAAAAJAAcAAAATAAoAAAAJAAcAAAAAAAsAAAAJAAcAAAABAAsAAAAJAAcAAAACAAsAAAAJAAcAAAADAAsAAAAJAAcAAAAEAAsAAAAJAAcAAAAFAAsAAAAJAAcAAAAGAAsAAAAJAAcAAAAHAAsAAAAJAAcAAAAIAAsAAAAJAAcAAAAJAAsAAAAJAAcAAAAKAAsAAAAJAAcAAAALAAsAAAAJAAcAAAAMAAsAAAAJAAcAAAANAAsAAAAJAAcAAAAOAAsAAAAJAAcAAAAPAAsAAAAJAAcAAAAQAAsAAAAJAAcAAAARAAsAAAAJAAcAAAASAAsAAAAJAAcAAAATAAsAAAAJAAcAAAA=")
tile_set = ExtResource("1_w8io1")
rendering_quadrant_size = 64

[node name="Foreground" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(-6, -15)
tile_map_data = PackedByteArray("AAAAAAoAAAAAAAEAAAABAAoAAAABAAEAAAAJAAoAAAABAAEAAAAKAAoAAAAAAAEAAAALAAoAAAAAAAMAAAAMAAoAAAAAAAEAAAANAAoAAAAAAAIAAAAOAAoAAAAAAAAAAAAPAAoAAAAAAAMAAAAQAAoAAAAAAAQAAAARAAoAAAAAAAcAAAASAAoAAAAAAAUAAAATAAoAAAAAAAcAAAAAAAsAAAABAAYAAAABAAsAAAABAAUAAAACAAsAAAABAAYAAAADAAsAAAABAAcAAAAEAAsAAAABAAcAAAAFAAsAAAABAAcAAAAGAAsAAAABAAcAAAAHAAsAAAABAAYAAAAIAAsAAAABAAQAAAAJAAsAAAABAAYAAAAKAAsAAAABAAYAAAALAAsAAAABAAUAAAAMAAsAAAABAAYAAAANAAsAAAABAAcAAAAOAAsAAAABAAYAAAAPAAsAAAABAAcAAAAQAAsAAAABAAYAAAARAAsAAAABAAYAAAASAAsAAAABAAYAAAATAAsAAAABAAUAAAAFAAoAAAAAAAEAAAAEAAoAAAAAAAIAAAADAAoAAAAAAAEAAAACAAoAAAAAAAMAAAAGAAoAAAAAAAgAAAAHAAoAAAAAAAkAAAAIAAoAAAAAAAsAAAA=")
tile_set = ExtResource("1_w8io1")
rendering_quadrant_size = 64

[node name="Decor" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(-6, -10)
tile_map_data = PackedByteArray("AAACAAkAAAAEAAYAAAAOAAkAAAAEAAgAAAAQAAkAAAAEAAgAAAASAAkAAAAEAAkAAAAGAAkAAAAEAAoAAAALAAkAAAADAAoAAAABAAYAAAAJAAMAAAABAAUAAAAJAAUAAAADAAMAAAAJAAQAAAAEAAMAAAAJAAUAAAAGAAIAAAAJAAMAAAAIAAIAAAAJAAMAAAAJAAEAAAAJAAMAAAAKAAEAAAAJAAUAAAALAAIAAAAJAAQAAAANAAIAAAAJAAQAAAAPAAIAAAAJAAQAAAAPAAMAAAAJAAMAAAARAAQAAAAJAAMAAAASAAUAAAAJAAMAAAARAAYAAAAJAAMAAAARAAcAAAAJAAMAAAAQAAcAAAAJAAUAAAAOAAcAAAAJAAMAAAAKAAcAAAAJAAMAAAAJAAcAAAAJAAMAAAAHAAYAAAAJAAMAAAAGAAcAAAAJAAQAAAAFAAcAAAAJAAMAAAADAAYAAAAJAAUAAAAEAAYAAAAJAAQAAAAEAAUAAAAJAAUAAAAFAAUAAAAJAAUAAAAFAAQAAAAJAAUAAAAGAAQAAAAJAAQAAAAIAAQAAAAJAAUAAAAJAAQAAAAJAAMAAAAKAAQAAAAJAAQAAAAEAAsAAAAEAAAAAAASAAsAAAAEAAAAAAA=")
tile_set = ExtResource("1_w8io1")
rendering_quadrant_size = 64

[node name="CoinContainer" type="Node2D" parent="."]

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_kvbsp")
autoplay = true
